--- a/templates/banco/index.html.twig
+++ b/templates/banco/index.html.twig
@@ -15,7 +15,7 @@
             <tr>
                 <th>Nombre</th>
                 <th>Cuenta</th>
-                <th>Estado</th>
+                <th>Activo</th>
                 <th>Editar</th>
                 <th>Eliminar</th>
             </tr>
@@ -34,7 +34,26 @@
         </div>
         </br>
         <div id="formularios-div" style="padding: 0; display: none">
-            <div id="formularios"></div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label for="nombre">Nombre Banco</label>
+                        <input type="text" class="form-control nombre" id="agregar-nombre" name="agregar-nombre">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label for="cuenta">Numero Cuenta</label>
+                        <input type="text" class="form-control cuenta" id="agregar-cuenta" name="agregar-cuenta">
+                    </div>
+                </div>
+                <br>
+                <div class="col-md-2">
+                    <div class="form-group">
+                        <button type="button" class="btn btn-danger glyphicon glyphicon-trash" data-role="esconder-formulario"></button>
+                    </div>
+                </div>
+            </div>
             </br>
             <div class="row">
                 <div class="col-md-4">
@@ -63,11 +82,15 @@
                             <label>Cuenta</label>
                             <input type="text" id="cuenta" class="form-control" name="cuenta">
                         </div>
-                        <input type="text" id="editar-id" class="form-control" name="id">
+                        <div class="form-check">
+                            <label class="form-check-label">Activo</label></br>
+                            <input type="checkbox" id="activo" class="form-check-input" value="activo" name="activo[]">
+                        </div>
+                        <input type="hidden" id="editar-id" class="form-control" name="id">
                     </div>
                     <div class="modal-footer">
                         <a href="#" id="save" class="btn btn-primary" data-dismiss="modal">Actualizar</a>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
                     </div>
                 </form>
             </div>
@@ -91,7 +114,7 @@
                             <label>Banco:</label>
                         </div>
                         <div class="col-md-4">
-                            <label id="eliminar-nombre">Guardar</label>
+                            <label id="eliminar-nombre"></label>
                         </div>
                     </div>
                     <div class="row">
@@ -99,48 +122,29 @@
                             <label>Cuenta:</label>
                         </div>
                         <div class="col-md-4">
-                            <label id="eliminar-cuenta">Guardar</label>
+                            <label id="eliminar-cuenta"></label>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-2">
-                            <label>Estado:</label>
+                            <label>Activo:</label>
                         </div>
                         <div class="col-md-3">
-                            <label>Guardar</label>
+                            <label id="eliminar-activo"></label>
                         </div>
                     </div>
-                    <input type="text" id="eliminar-id" class="form-control" name="id">
+                    <form id="formulario-eliminar">
+                        <input type="hidden" id="eliminar-id" class="form-control" name="id">
+                    </form>
                 </div>
                 <div class="modal-footer">
-                     <a href="#" id="save" class="btn btn-danger" data-dismiss="modal">Borrar</a>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                </div>
-            </div>
-        </div>
-    </div> 
-    <!--
-    <div id="modal-eliminar" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="custom-width-modalLabel" aria-hidden="true" style="display: none;">
-        <div class="modal-dialog" style="width:55%;">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                </div>
-                <div class="modal-body text-center">
-                    <h3> ¿ Esta seguro que desea eliminar este elemento ?</h3>
-                    <i class="fa fa-warning" style="font-size:60px;color:red"></i>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default waves-effect remove-data-from-delete-form" data-dismiss="modal">Cancelar</button>
-                    <button type="submit" dataurl="" onclick="ajaxDelete(this)"  data-dismiss="modal" class="btn btn-danger waves-effect waves-light remove-record-model">Borrar</button>
+                     <a href="#" id="delete" class="btn btn-danger" data-dismiss="modal">Borrar</a>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
                 </div>
             </div>
         </div>
     </div>
-    -->
 
-
-    
 </div>
 {% endblock %}
 {% block javascripts %}
